[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["Drew Pearce <drew@caffdev.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
jmespath = "^1.0.1"
python-dateutil = "^2.8.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
hacking = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
